kubernetes/kpt/heimdall/heimdall-deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: heimdall
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall
  namespace: heimdall
  labels:
    app: heimdall
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heimdall
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      containers:
        - name: heimdall
          image: "linuxserver/heimdall"
          imagePullPolicy: Always
          ports:
            - name: https
              containerPort: 443
              protocol: TCP
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
          - name: config
            mountPath: /config
      volumes:
      - name: config
        nfs:
          server: gimli.home
          path: /appdata/heimdall
