kubernetes/kpt/heimdall/heimdall-service.yaml
---
# Source: heimdall/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heimdall
  namespace: heimdall  
spec:
  ports:
    - name: https
      port: 443
      targetPort: 443 
      protocol: TCP
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: heimdall
