kubernetes/kpt/heimdall/heimdall-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: heimdall-ingress
  namespace: heimdall
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - lester.network
    secretName: heimdall-tls
  rules:
  - host: lester.network
    http:
      paths:
      - path: /
        backend:
          serviceName: heimdall
          servicePort: 443
